# RAG_pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: contracts.py  main.py  utils.py
frontend/: streamlit_ui.py
