[tool.poetry]
name = "rag_pipeline"
version = "0.1.0"
description = ""
authors = ["Eduard Poliakov <ya.polykov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.115.0"
llama-index = "^0.11.16"
openai = "^1.51.0"
streamlit = "^1.39.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
llama-index-vector-stores-faiss = "^0.2.1"
faiss-cpu = "^1.8.0.post1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
